--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
@@ -6,7 +6,7 @@
 	<meta name="description" content="">
 	<meta name="author" content="">
 
-	<title>Clean - One Page Personal Portfolio</title>
+	<title>Irshad Ali</title>
 
 	<!-- CSS -->
 	<link href="assets/bootstrap/css/bootstrap.min.css" rel="stylesheet" media="screen">
@@ -33,9 +33,10 @@
 	<section id="home" class="pfblock-image screen-height">
         <div class="home-overlay"></div>
 		<div class="intro">
-			<div class="start">Hello, my name is John Doe and I am</div>
+			<div class="start">Hello, my name is Irshad Ali and I am</div>
 			<h1>Full Stack Web Developer</h1>
-			<div class="start">creating modern and responsive Web Application</div>
+			<div class="start">creating modern and responsive Web Applications</div>
+            <div class="start">Having a wide variety of skills with specialization in Microsoft technologies</div>
 		</div>
 
         <a href="#services">
@@ -65,13 +66,13 @@
 						<span class="icon-bar"></span>
 						<span class="icon-bar"></span>
 					</button>
-					<a class="navbar-brand" href="index.html">John Doe</a>
+					<a class="navbar-brand" href="index.html">Irshad Ali</a>
 				</div>
 
 				<div class="collapse navbar-collapse" id="custom-collapse">
 					<ul class="nav navbar-nav navbar-right">
 						<li><a href="#home">Home</a></li>
-						<li><a href="#services">Services</a></li>
+						<li><a href="#summary">Summary</a></li>
                         <li><a href="#portfolio">Works</a></li>
                         <li><a href="#skills">Skills</a></li>
 						<li><a href="#testimonials">Testimonials</a></li>
@@ -89,93 +90,75 @@
 
     <!-- Services start -->
 
-	<section id="services" class="pfblock pfblock-gray">
-		<div class="container">
-			<div class="row">
-
-				<div class="col-sm-6 col-sm-offset-3">
-
-					<div class="pfblock-header wow fadeInUp">
-						<h2 class="pfblock-title">This is what I do</h2>
-						<div class="pfblock-line"></div>
-						<div class="pfblock-subtitle">
-							No one lights a lamp in order to hide it behind the door: the purpose of light is to create more light, to open people’s eyes, to reveal the marvels around.
-						</div>
-					</div>
-
-				</div>
-
-			</div>
-
-			<div class="row">
-
-				<div class="col-sm-3">
-
-					<div class="iconbox wow slideInLeft">
-						<div class="iconbox-icon">
-							<span class="icon-magic-wand"></span>
-						</div>
-						<div class="iconbox-text">
-							<h3 class="iconbox-title">Web Design</h3>
-							<div class="iconbox-desc">
-								Good things come to those who wait, but only the things left by those who hustle
-							</div>
-						</div>
-					</div>
-
-				</div>
-
-				<div class="col-sm-3">
-
-					<div class="iconbox wow slideInLeft">
-						<div class="iconbox-icon">
-							<span class="icon-puzzle"></span>
-						</div>
-						<div class="iconbox-text">
-							<h3 class="iconbox-title">Web Programming</h3>
-							<div class="iconbox-desc">
-								Good things come to those who wait, but only the things left by those who hustle
-							</div>
-						</div>
-					</div>
-
-				</div>
-
-				<div class="col-sm-3">
-
-					<div class="iconbox wow slideInRight">
-						<div class="iconbox-icon">
-							<span class="icon-badge"></span>
-						</div>
-						<div class="iconbox-text">
-							<h3 class="iconbox-title">Branding</h3>
-							<div class="iconbox-desc">
-								Good things come to those who wait, but only the things left by those who hustle
-							</div>
-						</div>
-					</div>
-
-				</div>
-
-				<div class="col-sm-3">
-
-					<div class="iconbox wow slideInRight">
-						<div class="iconbox-icon">
-							<span class="icon-question"></span>
-						</div>
-						<div class="iconbox-text">
-							<h3 class="iconbox-title">Consultation</h3>
-							<div class="iconbox-desc">
-								Good things come to those who wait, but only the things left by those who hustle
-							</div>
-						</div>
-					</div>
-
-				</div>
-
-			</div><!-- .row -->
-		</div><!-- .container -->
-	</section>
+    <section id="summary" class="pfblock pfblock-gray">
+        <div class="container">
+            <div class="row">
+                <div class="col-sm-8 col-sm-offset-2">
+                    <div class="pfblock-header wow fadeInUp">
+                        <h2 class="pfblock-title">I am passionate about my job</h2>
+                        <div class="pfblock-line"></div>
+                        <div class="pfblock-subtitle">
+                            Innovative software engineer offering 3 and half years of experience in the full software development lifecycle – from concept through delivery of next-generation applications and customizable solutions.
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm-3">
+                    <div class="iconbox wow slideInLeft">
+                        <div class="iconbox-icon">
+                            <span class="icon-magic-wand"></span>
+                        </div>
+                        <div class="iconbox-text">
+                            <h3 class="iconbox-title">Web Design</h3>
+                            <div class="iconbox-desc">
+                                Able to communicate with team, and become proficient at root cause analysis while communicating and resolving customer technical problems.
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-3">
+                    <div class="iconbox wow slideInLeft">
+                        <div class="iconbox-icon">
+                            <span class="icon-puzzle"></span>
+                        </div>
+                        <div class="iconbox-text">
+                            <h3 class="iconbox-title">Technology</h3>
+                            <div class="iconbox-desc">
+                                Exposure in highly standard software application development projects
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-3">
+                    <div class="iconbox wow slideInRight">
+                        <div class="iconbox-icon">
+                            <span class="icon-badge"></span>
+                        </div>
+                        <div class="iconbox-text">
+                            <h3 class="iconbox-title">Consultation</h3>
+                            <div class="iconbox-desc">
+                                Participates in architecture and design of solution leads to module level design and implementation.
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-3">
+                    <div class="iconbox wow slideInRight">
+                        <div class="iconbox-icon">
+                            <span class="icon-question"></span>
+                        </div>
+                        <div class="iconbox-text">
+                            <h3 class="iconbox-title">Self taught</h3>
+                            <div class="iconbox-desc">
+                                Adopts emerging standards for software application development architecture and tools.
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div><!-- .row -->
+        </div><!-- .container -->
+    </section>
 
 	<!-- Services end -->
     
